# wsg50-ros-pkg

./: README.html  README.md
wsg_50_common/: CMakeLists.txt  package.xml
wsg_50_common/action/: WeissGripperCmd.action
wsg_50_common/msg/: KeyValue.msg  StateCmd.msg  Status.msg
wsg_50_common/srv/: ServerConfiguration.srv
wsg_50_driver/: CMakeLists.txt  package.xml  setup.py
wsg_50_driver/include/wsg_50/: common.h  functions.h  gripper_action_server.h  gripper_command_action.h  gripper_communication.h  gripper_monitor.h  gripper_standard_action_server.h  interface.h  msg.h  specialized_gripper_command_action.h
wsg_50_driver/launch/: grippercontroller.yaml  wsg_50_tcp-dbg.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch
wsg_50_driver/scripts/: web_services.py
wsg_50_driver/src/: common.cpp  functions.cpp  functions_can.cpp  gripper_action_server.cpp  gripper_command_action.cpp  gripper_command_action_node.cpp  gripper_communication.cpp  gripper_monitor.cpp  gripper_standard_action_server.cpp  main.cpp  main_can.cpp  specialized_gripper_command_action.cpp
wsg_50_simulation/: CMakeLists.txt  package.xml
wsg_50_simulation/src/: wsg_50_sim_driver.cpp
wsg_driver/: CMakeLists.txt  package.xml
wsg_driver/config/: citec.lua  cmd_measure.lua
wsg_driver/include/wsg_driver/: functions.h  gripper_action_server.h  gripper_communication.h  gripper_data.h  gripper_socket.h  gripper_standard_action_server.h  tcp.h  udp.h
wsg_driver/include/wsg_driver/can/: can_device.h  wsg_can.h
wsg_driver/launch/: test.launch  wsg_50_can.launch  wsg_50_tcp-dbg.launch  wsg_50_tcp.launch  wsg_50_tcp_script.launch  wsg_50_udp_script.launch
wsg_driver/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  functions_can.cpp  gripper_action_server.cpp  gripper_communication.cpp  gripper_data.cpp  gripper_socket.cpp  gripper_standard_action_server.cpp  interface.cpp  main.cpp  main_can.cpp  msg.c  serial.c  tcp.c  udp.c
wsg_driver/src/can/: can_device.cpp  wsg_can.cpp
wsg_msgs/: CMakeLists.txt  package.xml
