<?xml version="1.0"?>
<package format="2">
  <name>wsg_msgs</name>
  <version>0.0.1</version>
  <description>The wsg_msgs package</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>

  <license>BSD</license>

  <author >Nicolas Alt</author>
  <author >Robotnik</author>
  <author >Weiss Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>actionlib</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>